force-app/main/default/objects/phsUserGoals__c/phsUserGoals__c.object-meta.xml
<CustomObject>
    <label>phsUserGoals</label>
    <nameField>
        <label>phsUserGoals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsUserGoals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>