force-app/main/default/objects/phsUserGoals__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True or false to check if goal is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>