force-app/main/default/objects/phsUserGoals__c/fields/FocusArea__c.field-meta.xml
<CustomField>
    <fullName>FocusArea__c</fullName>
    <description>Name of the FocusArea</description>
    <label>FocusArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>