force-app/main/default/objects/phsUserGoals__c/fields/GoalAdherence__c.field-meta.xml
<CustomField>
    <fullName>GoalAdherence__c</fullName>
    <description>This field stores number for goal adherence value</description>
    <label>GoalAdherence</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>