force-app/main/default/objects/phsUserGoals__c/fields/GoalEffectiveness__c.field-meta.xml
<CustomField>
    <fullName>GoalEffectiveness__c</fullName>
    <description>This field stores number for goal effectiveness value</description>
    <label>GoalEffectiveness</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>