force-app/main/default/objects/phsUserGoals__c/fields/GoalStrategyStatus__c.field-meta.xml
<CustomField>
    <fullName>GoalStrategyStatus__c</fullName>
    <label>GoalStrategyStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>