force-app/main/default/objects/phsUserGoals__c/fields/GoalType__c.field-meta.xml
<CustomField>
    <fullName>GoalType__c</fullName>
    <description>Standard goal / custom goal</description>
    <label>GoalType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>