force-app/main/default/objects/phsUserGoals__c/fields/LastCheckInDate__c.field-meta.xml
<CustomField>
    <fullName>LastCheckInDate__c</fullName>
    <description>This hold date of last check-in by user</description>
    <label>LastCheckInDate</label>
    <type>DateTime</type>
</CustomField>