force-app/main/default/objects/phsUserGoals__c/fields/ManagerFeedback__c.field-meta.xml
<CustomField>
    <fullName>ManagerFeedback__c</fullName>
    <label>ManagerFeedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>