force-app/main/default/objects/phsUserGoals__c/fields/ManagerGoalId__c.field-meta.xml
<CustomField>
    <fullName>ManagerGoalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To track manager goals from phsManagerGoals</description>
    <label>ManagerGoalId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>phsUserGoals (ManagerGoalId)</relationshipLabel>
    <relationshipName>phsUserGoalsManager</relationshipName>
    <type>Lookup</type>
</CustomField>