force-app/main/default/objects/phsUserGoals__c/fields/SharedBy__c.field-meta.xml
<CustomField>
    <fullName>SharedBy__c</fullName>
    <label>SharedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>