force-app/main/default/objects/phsUserGoals__c/fields/SharedTo__c.field-meta.xml
<CustomField>
    <fullName>SharedTo__c</fullName>
    <label>SharedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>