force-app/main/default/objects/phsUserGoals__c/fields/StandardGoalId__c.field-meta.xml
<CustomField>
    <fullName>StandardGoalId__c</fullName>
    <label>StandardGoalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>