force-app/main/default/objects/phsUserGoals__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To hold status of goal</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>